<resources>
    <string name="app_name">RBX-Get Daily Robux Counter</string>
    <string name="let_s_starts">Let’s Starts</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_daily_robox">Get Daily Robox</string>
    <string name="rbx_to_dollar">RBX To Dollar</string>
    <string name="dictionary">Dictionary</string>
    <string name="setting">Setting</string>
    <string name="scratch">Scratch</string>
    <string name="bc_to_rbx">BC To RBX</string>
    <string name="tbc_to_rbx">TBC To RBX</string>
    <string name="obc_to_rbx">OBC To RBX</string>
    <string name="quiz">Quiz</string>
    <string name="spin_wheels">Spin Wheels</string>
    <string name="meme">Meme</string>
    <string name="tips_amp_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="enter_your_rbx">Enter Your Rbx</string>
    <string name="convert_now">Convert Now</string>
    <string name="you_will_receive">You Will Receive:-</string>
    <string name="done">Done</string>
    <string name="spin_earn_exciting_rewards"><![CDATA[Spin & Earn Exciting Rewards!]]></string>
    <string name="stands_a_chance_to_win_bag_full_of_this_app_s_for_spinning_the_wheel_of_fortune">Stands a chance to win bag full of this app’s for spinning the wheel of fortune</string>
    <string name="spin_now">Spin Now</string>
    <string name="robx_budgeting">Robx Budgeting</string>
    <string name="win_free_robux">Win Free Robux</string>
    <string name="get_your_robux_by_following_these_instructions">Get Your Robux By Following These Instructions:</string>
    <string name="please_follow_the_step_by_step_process_instructions_below"><![CDATA[Please Follow The Step by Step Process & Instructions Below.]]></string>
    <string name="step_1">Step 1 :</string>
    <string name="give_5_stars_ratings_with_review">Give 5 Stars Ratings With Review.</string>
    <string name="give_5_stars">Give 5 Stars</string>
    <string name="level">Level</string>
    <string name="start_now">Start Now</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="dollar_to_rbx">Dollar To RBX</string>
    <string name="rbx_to_dollar_converter_t">Rbx To Dollar Converter</string>
    <string name="enter_your_rbx_q">Enter Your Rbx</string>
    <string name="enter_number_of_rbx_q_h">Enter Number Of Rbx</string>
    <string name="do_to_t">Dollar To Rbx Converter</string>
    <string name="enter_your_dollar_q">Enter Your Dollar</string>
    <string name="enter_number_of_dollar_q_h">Enter Number Of Dollar</string>
    <string name="b_to_r">BC To Rbx Converter</string>
    <string name="enter_your_b_q">Enter Your Dollar</string>
    <string name="enter_number_of_b_q_h">Enter Number Of Bc</string>
    <string name="t_to_r">Tbc To Rbx Converter</string>
    <string name="enter_your_t_q">Enter Your Tbc</string>
    <string name="enter_number_of_t_q_h">Enter Number Of Tbc</string>
    <string name="o_to_r">Obc To Rbx Converter</string>
    <string name="enter_your_o_q">Enter Your Obc</string>
    <string name="enter_number_of_o_q_h">Enter Number Of Obc</string>
    <string name="rbx">%1$s Rbx</string>
    <string name="dollar">%1$s Dollar</string>
    <string name="scratch_win"><![CDATA[Scratch & Win]]></string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_earned">You Have Earned</string>
    <string name="collect">Collect</string>
    <string name="claim_2x">Claim 2X</string>
    <string name="spin_win"><![CDATA[Spin & Win]]></string>
    <string name="robox_added">%1$s Robox Added</string>
    <string name="spin_again">Spin Again</string>
    <string name="free_spin">Free Spin : %1$s</string>
    <string name="please_spin_tomorrow">Please spin tomorrow</string>
    <string name="memes">Memes</string>
    <string name="robx_vs_reality">Robx vs. Reality</string>
    <string name="expectation_my_avatar_looks_amazing_reality_wears_a_free_shirt_and_pants">Expectation: My avatar looks amazing! Reality: Wears a free shirt and pants</string>
    <string name="when_you_get_robx">When You Get Robx</string>
    <string name="me_after_getting_robx_spends_it_all_on_useless_items">Me after getting Robx: Spends it all on useless items</string>
    <string name="robx_scams">Robx Scams</string>
    <string name="when_you_realize_that_free_robx_was_just_a_scam_facepalm">When you realize that \'free Robx\' was just a scam: facepalm</string>
    <string name="game_updates">Game Updates</string>
    <string name="when_the_game_updates_and_you_have_to_relearn_everything_why_roblox_why">When the game updates and you have to relearn everything: Why, Roblox, why?</string>
    <string name="robx_for_game_passes">Robx for Game Passes</string>
    <string name="me_i_ll_never_buy_a_game_pass_also_me_spends_800_robx_on_a_double_jump">Me: I\'ll never buy a game pass. Also me: spends 800 Robx on a double jump</string>
    <string name="roblox_fashion">Roblox Fashion</string>
    <string name="when_you_see_someone_with_a_limited_edition_item_i_m_not_worthy">When you see someone with a limited edition item: I\'m not worthy</string>
    <string name="robx_inflation">Robx Inflation</string>
    <string name="when_you_realize_that_100_robx_doesn_t_buy_what_it_used_to_inflation_is_real">When you realize that 100 Robx doesn\'t buy what it used to: Inflation is real</string>
    <string name="when_your_friend_says_they_ll_help_you_in_a_game_but_just_stands_there_thanks_for_nothing">When your friend says they\'ll help you in a game but just stands there: Thanks for nothing!</string>
    <string name="roblox_friends">Roblox Friends</string>
    <string name="roleplay_troll">Roleplay Troll</string>
    <string name="when_the_whole_server_is_roleplaying_but_you_re_just_there_to_troll">When the whole server is roleplaying, but you\'re just there to troll.</string>
    <string name="spends_5_hours_grinding_for_one_extra_level">Spends 5 hours grinding... for one extra level.</string>
    <string name="simulator_grinding">Simulator Grinding</string>
    <string name="friend_fair_trade_only_proceeds_to_scam_me_for_my_legendary_pet">Friend: \'Fair trade only!\' Proceeds to scam me for my legendary pet.</string>
    <string name="adopt_me_trades">Adopt Me Trades</string>
    <string name="tower_of_hell_be_like_you_fell_start_over_loser">Tower of Hell be like: \'You fell? Start over, loser.\'</string>
    <string name="tower_of_hell">Tower of Hell</string>
    <string name="friend_look_at_my_rare_pet_me_that_s_great_but_i_have_two_cats">Friend: Look at my rare pet! Me: That\'s great, but I have two cats.</string>
    <string name="pet_simulator_flex">Pet Simulator Flex</string>
    <string name="spent_an_hour_building_accidentally_hits_the_leave_button">Spent an hour building, accidentally hits the \'leave\' button.</string>
    <string name="accidental_leave">Accidental Leave</string>
    <string name="afk_teammates_legends_who_do_nothing_but_still_win">AFK teammates: Legends who do nothing but still win.</string>
    <string name="afk_teammates">AFK Teammates</string>
    <string name="spawning_in_the_middle_of_chaos_like_guess_i_ll_die">Spawning in the middle of chaos like: \'Guess I\'ll die.\'</string>
    <string name="spawn_trapping">Spawn Trapping</string>
    <string name="robx_it_s_not_you_it_s_the_lag_but_you_still_died">Robx: It\'s not you, it\'s the lag... but you still died.</string>
    <string name="lag_kills_you">Lag Kills You</string>
    <string name="when_your_friend_joins_the_server_right_after_you_rage_quit">When your friend joins the server right after you rage-quit.</string>
    <string name="friend_joins_after_game_ends">Friend Joins After Game Ends</string>
    <string name="pov_you_re_in_the_middle_of_a_boss_fight_and_the_wifi_says_goodbye">POV: You\'re in the middle of a boss fight, and the WiFi says goodbye.</string>
    <string name="relatable_gamer_meme">Relatable Gamer Meme</string>
    <string name="why_did_the_gamer_bring_a_ladder_to_reach_the_next_level">Why did the gamer bring a ladder? To reach the next level!</string>
    <string name="gaming_joke">Gaming Joke</string>
    <string name="did_you_know_robx_has_over_40_million_games_created_by_users">Did you know? Robx has over 40 million games created by users.</string>
    <string name="fun_fact_about_robx">Fun fact about Robx:</string>
    <string name="check_out_this_meme_when_your_wifi_disconnects_mid_game">Check out this meme! When your WiFi disconnects mid-game.</string>
    <string name="relatable_gamer_meme_1">Relatable Gamer Meme</string>
    <string name="when_you_find_a_group_of_friends_who_love_roblox_as_much_as_you_do_finally_my_people">When you find a group of friends who love Roblox as much as you do: Finally, my people!</string>
    <string name="roblox_community">Roblox Community</string>
    <string name="when_you_see_someone_with_a_cool_outfit_i_need_that_in_my_life">When you see someone with a cool outfit: I need that in my life!</string>
    <string name="roblox_fashion_1">Roblox Fashion</string>
    <string name="when_the_game_updates_and_you_have_to_start_from_scratch_why_roblox_why">When the game updates and you have to start from scratch: Why, Roblox, why?</string>
    <string name="roblox_updates">Roblox Updates</string>
    <string name="when_you_buy_a_game_pass_and_it_doesn_t_work_what_a_scam">When you buy a game pass and it doesn\'t work: What a scam!</string>
    <string name="roblox_game_passes">Roblox Game Passes</string>
    <string name="when_your_friend_gets_a_rare_item_and_you_don_t_i_m_happy_for_you_i_guess">When your friend gets a rare item and you don\'t: I\'m happy for you... I guess</string>
    <string name="roblox_friends_1">Roblox Friends</string>
    <string name="when_you_die_for_the_10th_time_in_a_row_i_m_done_with_this_game">When you die for the 10th time in a row: I\'m done with this game!</string>
    <string name="roblox_rage">Roblox Rage</string>
    <string name="when_you_finally_get_that_rare_pet_i_m_never_letting_you_go">When you finally get that rare pet: I\'m never letting you go!</string>
    <string name="roblox_pets">Roblox Pets</string>
    <string name="when_you_see_a_beautifully_built_game_i_can_barely_build_a_box">When you see a beautifully built game: I can barely build a box</string>
    <string name="roblox_builders">Roblox Builders</string>
    <string name="roblox_obby">Roblox Obby</string>
    <string name="me_this_obby_looks_easy_also_me_falls_on_the_first_jump">Me: This obby looks easy! Also me: Falls on the first jump</string>
    <string name="robx_trade_offers">Robx Trade Offers</string>
    <string name="when_someone_offers_you_a_trade_that_s_clearly_not_fair_nice_try_buddy">When someone offers you a trade that\'s clearly not fair: Nice try, buddy</string>
    <string name="roblox_roleplay">Roblox Roleplay</string>
    <string name="when_you_join_a_roleplay_server_and_everyone_is_super_serious_am_i_in_the_right_place">When you join a roleplay server and everyone is super serious: Am I in the right place?</string>
    <string name="roblox_events">Roblox Events</string>
    <string name="when_you_miss_a_limited_time_event_crying_in_robx">When you miss a limited-time event: Crying in Robx</string>
    <string name="roblox_updates_1">Roblox Updates</string>
    <string name="when_the_game_updates_and_you_have_to_relearn_the_controls_why_do_they_keep_changing_things">When the game updates and you have to relearn the controls: Why do they keep changing things?</string>
    <string name="_01">01</string>
    <string name="do_you_want_to_exit">Do You Want To Exit?</string>
    <string name="please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving">Please spare a Moment To Rate And Give Your Valuable Feedback To Us Before Leaving....</string>
    <string name="yes_exit">Yes, Exit</string>
</resources>