<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="15dp"
            android:src="@drawable/ic_exit"
            app:layout_constraintDimensionRatio="16:7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/f_b"
            android:includeFontPadding="false"
            android:text="@string/do_you_want_to_exit"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageHolder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/f_b"
            android:includeFontPadding="false"
            android:text="@string/please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving"
            android:textAlignment="center"
            android:textColor="@color/sub_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textMainTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSubTitle">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ans_bg_color"
                android:fontFamily="@font/f_b"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/rate_app"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/f_b"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/yes_exit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>