<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".view.LetStartsActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/margin_top"
        android:src="@drawable/ic_main_image"
        app:layout_constraintDimensionRatio="16:8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/ic_main_bg"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLetStart"
                style="@style/let_screen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/let_s_starts"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_lets_starts"
                app:iconSize="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRateApp"
                style="@style/let_screen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/rate_app"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_rate_app"
                app:iconSize="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShareApp"
                style="@style/let_screen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/share_app"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_share_app"
                app:iconSize="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPrivacyPolicy"
                style="@style/let_screen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/privacy_policy"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_privacy_policy"
                app:iconSize="40dp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bottomImage"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="@dimen/bottomImageSize"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>