<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QuizStartActivity">

    <include
        android:id="@+id/layoutActionBar"
        layout="@layout/top_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textWinFreeRobux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="@font/f_b"
                android:includeFontPadding="false"
                android:text="@string/win_free_robux"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textWinFreeRobux2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:fontFamily="@font/f_s_b"
                android:includeFontPadding="false"
                android:text="@string/get_your_robux_by_following_these_instructions"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWinFreeRobux" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textWinFreeRobux3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/f_m"
                android:includeFontPadding="false"
                android:text="@string/please_follow_the_step_by_step_process_instructions_below"
                android:textColor="@color/sub_text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWinFreeRobux2" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/layout5Start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWinFreeRobux3"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textStep1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_b"
                        android:includeFontPadding="false"
                        android:text="@string/step_1"
                        android:textColor="@color/main_color"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_s_b"
                        android:includeFontPadding="false"
                        android:text="@string/give_5_stars_ratings_with_review"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_anser_r_10"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/f_b"
                            android:includeFontPadding="false"
                            android:text="@string/give_5_stars"
                            android:textColor="@color/main_color"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/ic_star" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/ic_star" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/ic_star" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/ic_star" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_star" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/layoutLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout5Start"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_b"
                        android:includeFontPadding="false"
                        android:text="@string/level"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textLevelNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_s_b"
                        android:includeFontPadding="false"
                        android:text="@string/_01"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:progress="50"
                        android:progressBackgroundTint="@color/main_color"
                        android:secondaryProgressTint="@color/ans_bg_color"
                        app:indicatorColor="@color/main_color"
                        app:indicatorTrackGapSize="0dp"
                        app:layout_constraintTop_toBottomOf="@id/textLevel"
                        app:trackCornerRadius="25dp"
                        app:trackStopIndicatorSize="0dp"
                        app:trackThickness="12dp" />

                    <ImageView
                        android:id="@+id/imageRobuxCoin"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_coin_robux"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/progressBar" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textCoinNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/f_b"
                        android:includeFontPadding="false"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/progressBar"
                        tools:text="400/6000" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStartNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/f_b"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="40dp"
        android:text="@string/start_now"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_start"
        app:iconSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/layoutBottomHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutBottomHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <include
            android:id="@+id/layoutBottom"
            layout="@layout/small_2_image_layout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>